[package]
name = "rebels"
version = "1.0.31"
edition = "2021"
authors = ["Alessandro Ricottone <ricott2@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Anarchic spacepirates playing basketball in your terminal"
readme = "README.md"
homepage = "https://github.com/ricott1/rebels-in-the-sky"
repository = "https://github.com/ricott1/rebels-in-the-sky"
keywords = ["cli", "pirates", "rebels", "game"]
categories = ["games"]

[profile.release]
strip = true
opt-level = 3
lto = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ed25519-dalek = "2.2.0"
flate2 = { version = "1.1.2", features = ["zlib-ng"], default-features = false }
futures = "0.3.31"
gif = "0.13.3"
glam = "0.30.5"
image = "0.25.8"
imageproc = "0.25.0"
include_dir = "0.7.4"
itertools = "0.14.0"
libp2p = { version = "0.56.0", features = [
    "dns",
    "gossipsub",
    "macros",
    "mdns",
    "noise",
    "ping",
    "serde",
    "tcp",
    "tokio",
    "yamux",
] }
libp2p-swarm-test = "0.6.0"
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["file_appender", "pattern_encoder"] }
once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
ratatui = { version = "0.29.0", features = ["unstable-backend-writer"] }
rodio = "0.20.1"
russh = "0.54.3"
serde = { version = "1.0.219", features = ["derive", "default"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
sha2 = "0.10.9"
stream-download = { version = "0.22.4", features = ["reqwest-rustls"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["rt", "time", "macros", "sync"] }
tokio-util = "0.7.16"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
void = "1.0.2"
