[package]
name = "rebels"
version = "1.5.7"
edition = "2021"
authors = ["Alessandro Ricottone <ricott2@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Anarchic spacepirates playing basketball in your terminal"
readme = "README.md"
homepage = "https://github.com/ricott1/rebels-in-the-sky"
repository = "https://github.com/ricott1/rebels-in-the-sky"
keywords = ["cli", "pirates", "rebels", "game"]
categories = ["games"]

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.55", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
flate2 = { version = "1.1.8", features = ["zlib-ng"], default-features = false }
futures = "0.3.31"
gif = "0.14.1"
glam = "0.31.0"
image = "0.25.9"
imageproc = "0.26.0"
include_dir = "0.7.4"
itertools = "0.14.0"
libp2p = { version = "0.56.0", features = [
    "dns",
    "gossipsub",
    "macros",
    "noise",
    "serde",
    "tcp",
    "tokio",
    "yamux",
]}
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["file_appender", "pattern_encoder"] }
once_cell = "1.21.3"
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
ratatui = { version = "0.29", features = ["unstable-backend-writer"] }
serde = { version = "1.0.219", features = ["derive", "default"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["rt", "time", "macros", "sync"] }
tokio-util = "0.7.18"
tui-textarea = "0.7.0"
unicode-width = "0.2"
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# Feature deps
rodio = { version = "0.20.1", optional = true }
russh = { version = "0.57.0", optional = true }
stream-download = { version = "0.23.0", features = ["reqwest-rustls"], optional = true }
url = { version = "2.5.8", optional = true }

[features]
default = ["audio"]
audio = ["rodio", "stream-download", "url"]
relayer = []
ssh = ["russh"]

[dev-dependencies]
rayon = "1.11.0"
