[package]
name = "rebels"
version = "1.6.1"
edition = "2021"
authors = ["Alessandro Ricottone <ricott2@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Anarchic spacepirates playing basketball in your terminal"
readme = "README.md"
homepage = "https://github.com/ricott1/rebels-in-the-sky"
repository = "https://github.com/ricott1/rebels-in-the-sky"
keywords = ["cli", "pirates", "rebels", "game"]
categories = ["games"]

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
flate2 = { version = "1.1.9", features = ["zlib-ng"], default-features = false }
futures = "0.3.32"
gif = "0.14.2"
glam = "0.32.1"
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
imageproc = { version = "0.26.2", default-features = false, features = ["rayon"] }
include_dir = "0.7.4"
itertools = "0.14.0"
libp2p = { version = "0.56.0", features = [
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "noise",
    "serde",
    "tcp",
    "tokio",
    "yamux",
]}
log = "0.4.27"
log4rs = { version = "1.3.0", default-features = false, features = ["file_appender", "pattern_encoder"] }
rand = "0.10.1"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
ratatui = { version = "0.30", features = ["unstable-backend-writer"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
sha2 = "0.11.0"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
tokio = { version = "1.52.1", features = ["rt", "time", "macros", "sync"] }
tokio-util = "0.7.18"
ratatui-textarea = "0.9.1"
unicode-width = "0.2"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

# Feature deps
rodio = { version = "0.20.1", optional = true }
russh = { version = "0.60.1", optional = true }
stream-download = { version = "0.24.0", features = ["reqwest-rustls"], optional = true }
url = { version = "2.5.8", optional = true }

[features]
default = ["audio"]
audio = ["rodio", "stream-download", "url"]
relayer = []
ssh = ["russh"]

[dev-dependencies]
rayon = "1.12.0"
